Fix FormFieldRow spacing and button placement

--- a/src/App.css
+++ b/src/App.css
@@ -138,12 +138,12 @@ form > .row > label {
 
 .submission-button-block {
   display: inline-block;
-  vertical-align: -100px;
+  vertical-align: -88px;
 }
 
 .submission-edit-button-block {
   display: inline-block;
-  vertical-align: -125px;
+  vertical-align: -113px;
 }
 
 .submission-detail-container {
